fix flickering mobile bug, add show/hide words that use this square, fix rotating bugs, show all awkward word paths, fixed word duplication bug in word-per-square count

--- a/css/results.css
+++ b/css/results.css
@@ -32,6 +32,10 @@ body{
     color: var(--flagged-words);
 }
 
+.result_word.highlight{
+    color: #facc15;
+}
+
 .result_word:hover{
     opacity: 0.8;
 }
